// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Table Mobile 1`] = `
<Table
  elements={
    Array [
      Object {
        "name": "BCeID",
        "value": "bobross42",
      },
      Object {
        "name": "Last Name",
        "value": "Ross",
      },
      Object {
        "name": "First Name",
        "value": "Bob",
      },
      Object {
        "name": "Email Address",
        "value": "bob.ross@example.com",
      },
    ]
  }
  heading="BCeID Info"
  isFeesData={false}
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        >
          BCeID Info
        </th>
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "name": "BCeID",
            "value": "bobross42",
          }
        }
        isFeesData={false}
        key="BCeID"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Last Name",
            "value": "Ross",
          }
        }
        isFeesData={false}
        key="Last Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "First Name",
            "value": "Bob",
          }
        }
        isFeesData={false}
        key="First Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          }
        }
        isFeesData={false}
        key="Email Address"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table With Blue Stripe 1`] = `
<Table
  elements={
    Array [
      Object {
        "name": "BCeID",
        "value": "bobross42",
      },
      Object {
        "name": "Last Name",
        "value": "Ross",
      },
      Object {
        "name": "First Name",
        "value": "Bob",
      },
      Object {
        "name": "Email Address",
        "value": "bob.ross@example.com",
      },
    ]
  }
  heading=""
  isFeesData={false}
  styling="blue-stripe"
>
  <table
    className="blue-stripe"
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        />
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "name": "BCeID",
            "value": "bobross42",
          }
        }
        isFeesData={false}
        key="BCeID"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Last Name",
            "value": "Ross",
          }
        }
        isFeesData={false}
        key="Last Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "First Name",
            "value": "Bob",
          }
        }
        isFeesData={false}
        key="First Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          }
        }
        isFeesData={false}
        key="Email Address"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table With Bold Names 1`] = `
<Table
  elements={
    Array [
      Object {
        "isNameBold": true,
        "name": "Key",
        "value": "Value",
      },
    ]
  }
  heading=""
  isFeesData={false}
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        />
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "isNameBold": true,
            "name": "Key",
            "value": "Value",
          }
        }
        isFeesData={false}
        key="Key"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            <b>
              Key
            </b>
          </td>
          <td>
            Value
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table With Bold Values 1`] = `
<Table
  elements={
    Array [
      Object {
        "isValueBold": true,
        "name": "Key",
        "value": "Value",
      },
    ]
  }
  heading=""
  isFeesData={false}
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        />
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "isValueBold": true,
            "name": "Key",
            "value": "Value",
          }
        }
        isFeesData={false}
        key="Key"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Key
          </td>
          <td
            className=""
          >
            <b>
              Value
            </b>
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table With Fees 1`] = `
<Table
  elements={
    Array [
      Object {
        "isValueBold": true,
        "name": "Some Fees:",
        "value": "$100.00",
      },
      Object {
        "isValueBold": true,
        "name": "Some More Fees:",
        "value": "$10.00",
      },
      Object {
        "isEmptyRow": true,
        "name": "",
        "value": "",
      },
      Object {
        "isValueBold": true,
        "name": "Total Fees:",
        "value": "$110.00",
      },
    ]
  }
  heading=""
  isFeesData={true}
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        />
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "isValueBold": true,
            "name": "Some Fees:",
            "value": "$100.00",
          }
        }
        isFeesData={true}
        key="Some Fees:"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Some Fees:
          </td>
          <td
            className="right-align"
          >
            <b>
              $100.00
            </b>
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "isValueBold": true,
            "name": "Some More Fees:",
            "value": "$10.00",
          }
        }
        isFeesData={true}
        key="Some More Fees:"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Some More Fees:
          </td>
          <td
            className="right-align"
          >
            <b>
              $10.00
            </b>
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "isEmptyRow": true,
            "name": "",
            "value": "",
          }
        }
        isFeesData={true}
        key=""
      >
        <tr
          className="empty-row"
          colSpan="2"
        >
          <td
            className=""
          />
          <td />
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "isValueBold": true,
            "name": "Total Fees:",
            "value": "$110.00",
          }
        }
        isFeesData={true}
        key="Total Fees:"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Total Fees:
          </td>
          <td
            className="right-align"
          >
            <b>
              $110.00
            </b>
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table With Header 1`] = `
<Table
  elements={
    Array [
      Object {
        "name": "BCeID",
        "value": "bobross42",
      },
      Object {
        "name": "Last Name",
        "value": "Ross",
      },
      Object {
        "name": "First Name",
        "value": "Bob",
      },
      Object {
        "name": "Email Address",
        "value": "bob.ross@example.com",
      },
    ]
  }
  heading="BCeID Info"
  isFeesData={false}
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        >
          BCeID Info
        </th>
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "name": "BCeID",
            "value": "bobross42",
          }
        }
        isFeesData={false}
        key="BCeID"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Last Name",
            "value": "Ross",
          }
        }
        isFeesData={false}
        key="Last Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "First Name",
            "value": "Bob",
          }
        }
        isFeesData={false}
        key="First Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          }
        }
        isFeesData={false}
        key="Email Address"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table Without Header 1`] = `
<Table
  elements={
    Array [
      Object {
        "name": "BCeID",
        "value": "bobross42",
      },
      Object {
        "name": "Last Name",
        "value": "Ross",
      },
      Object {
        "name": "First Name",
        "value": "Bob",
      },
      Object {
        "name": "Email Address",
        "value": "bob.ross@example.com",
      },
    ]
  }
  heading=""
  isFeesData={false}
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        />
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "name": "BCeID",
            "value": "bobross42",
          }
        }
        isFeesData={false}
        key="BCeID"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Last Name",
            "value": "Ross",
          }
        }
        isFeesData={false}
        key="Last Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "First Name",
            "value": "Bob",
          }
        }
        isFeesData={false}
        key="First Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          }
        }
        isFeesData={false}
        key="Email Address"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;
